Fixing bug