@@ -128,6 +128,7 @@
 				<configuration>
 					<mainClass>${mainClass}</mainClass>
 					<options>
+						<option>--enable-native-access=javafx.graphics</option>
 						<option>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</option>
 						<option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
 						<option>--add-opens=java.base/java.text=ALL-UNNAMED</option>
